# AIPiloty

./: .gitignore  CONTRIBUTING.md  LICENSE  Launch AIPiloty.command  Makefile  README.md  TRACKER.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  encryption.py  logging.py  metrics.py
backend/app/middleware/: audit.py  body_size.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  audit_log.py  chat.py  deployment.py  doc_studio.py  image.py  provider_secret.py  testing.py  vm.py  (+1 more)
backend/scripts/: check_ensure_tool_registered.py  check_image_tool_direct.py  debug_nginx_urls.py  list_missions.py  repro_ide_vs_web_image.py  smoke_ensure_missions.py  smoke_image_session.py  smoke_mission_board_urls.py  smoke_platform_stats.py
backend/tests/: conftest.py  factories.py  test_agent_trajectories.py  test_auth.py  test_chat_cancel.py  test_deployments.py  test_diagram_routing.py  test_health.py  test_image_service.py  test_images_api.py  test_intent_mermaid_not_image.py  test_login.py  test_message_router.py  test_orchestrator_image_choice.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_provider_router.py  test_provider_secrets.py  test_rag.py  test_rate_limit.py  test_research_table_fast.py  test_rich_visual_scenarios.py  test_rich_visuals_prompt.py  test_routing_golden_set.py  test_runbooks.py  test_scheduler.py  test_testing_api.py  test_vms_crud.py  test_webhooks.py
(+392 files in other folders)
