[project]
name = "aipiloty-backend"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert usage OK in tests
    "S104",   # bind 0.0.0.0 OK for dev
    "S603",   # subprocess calls are intentional (tools)
    "S607",   # partial path subprocess OK
    "B008",   # Depends() in function args is FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/migrations/*",
    "app/alembic/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
show_missing = true
fail_under = 30
